--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,19 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
 }
+
+.online:before, .offline:before{
+    display: block;
+    content: "";
+    width: .62rem;
+    height: .62rem;
+    background: #42b72a;
+    border-radius: 50%;
+    margin-right: auto;
+    position: absolute;
+    top:18px;
+    left:24px;
+}
+.offline:before{
+  background: #ccc;
+}
